# mamll

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: week1.ipynb  week2.ipynb  week5.ipynb  week6.ipynb  week7.ipynb
src/mamll/datasets/: ToyData.py
src/mamll/dgm/: __init__.py  dequantized_mnist_flow.py  mog.py  vae_bernoulli.py
src/mamll/dgm/models/: flow.py  vae.py
src/mamll/diffgeom/: __init__.py  curve.py  geodesic.py  integral.py
src/mamll/graph/: ensemble.py  gnn_graph_classification.py  shallow_embedding.py
src/mamll/plot/: vae.py
